# dryad-training

./: .gitignore  Cargo.toml  data_process.py  pyproject.toml
src/: autoconverter.rs  chunk_parser.rs  dataloader.rs  file_parser.rs  lib.rs  policy_names.rs
src/data_processing/: chunk_parser.rs  dataloader.rs  file_parser.rs  leela_parser.rs  mod.rs
src/model/: model.py
training/: attention.py  outputs.py  policy_map.py
