[package]
name = "dryad-training"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "data_processing"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22.2", features = ["extension-module", "anyhow"] }
ndarray = "0.16.0"
anyhow = "1.0.86"
flate2 = "1.0.30"
rand = "0.8.5"
crossbeam = "0.8.4"
smallvec = "1.13.2"
reqwest = { version = "0.12.5", features = ["blocking", "stream"] }
scraper = "0.20.0"
chrono = "0.4.38"
tokio = { version = "1.39.2", features = ["rt-multi-thread", "process"] }
tempfile = "3.12.0"
tokio-util = "0.7.11"
tokio-stream = "0.1.15"
futures = "0.3.30"
async-compression = {version = "0.4.12", features = ["tokio", "gzip"] }
tokio-tar = "0.3.1"